# hyperliquid-skills

./: .gitignore  AGENTS.md  README.md  cli.py  compare.py  config.json  config_donchian.json  config_volatility.json  main.py  optimize.py  pyproject.toml
backtest/: engine.py
data/: fetcher.py  indicators.py  ingest.py  lake.py
execution/: order_manager.py
journal/: logger.py
risk/: gate.py
signals/: __init__.py  donchian.py  strategy.py  volatility.py
tests/integration/: test_backtest.py
tests/unit/: test_engine.py  test_journal.py  test_order_manager.py  test_signals.py
